@@ -7,3 +7,4 @@
 - corrected read.asc.R to read in xll & yll as midpoints of cells NOT ll corner
 - Updated read.asc & write.asc to include a toggle for gzip compression
 - made read.asc.gz & write.asc.gz simple wrapping scripts for the new read.asc & write.asc
+- simplified extract.data
